--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,15 @@
   "author": "RAPTO VERDAD",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "express-validator": "^6.14.2",
+    "googleapis": "^108.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
+    "uuid": "^9.0.0"
   }
 }
