--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "theraptoreumtruth.com is originally created by rapto verdad one of the leaders of the raptoreum team",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "RAPTO VERDAD",
   "license": "ISC",
@@ -15,9 +16,14 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "googleapis": "^108.0.0",
+    "joi": "^17.6.3",
+    "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
