--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
+    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
