--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "socket.io-client": "^4.5.3",
     "vue": "^3.2.39",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
